--- a/styles/main.css
+++ b/styles/main.css
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6, p {
     font-family: "Inter";
     font-size: 20px;
     font-weight: 500;
-    z-index: 6;
+    /* z-index: 5; */
     transition: background-color 0.3s ease-in;
 }
 
@@ -404,7 +404,7 @@ h1, h2, h3, h4, h5, h6, p {
     cursor: pointer;
     overflow-y: auto;
     display: none;
-    z-index: 5;
+    z-index: 6;
 }
 
 .modal__container {
@@ -412,7 +412,7 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 100%;
     /* height: 100vh; */
     /* max-height: 100%; */
-    background-color: rgba(0, 0, 0, 0.6);
+    /* background-color: rgba(0, 0, 0, 0.6); */
 
     display: flex;
     justify-content: flex-end;
@@ -432,6 +432,7 @@ h1, h2, h3, h4, h5, h6, p {
     top: 160px;
     padding: 63px 55px;
     cursor: default;
+    z-index: 10;
 }
 
 
@@ -589,251 +590,6 @@ textarea::placeholder {
 
 
 
-                                    /* Adaptive Modal block */
-
-
-
-
-@media only screen and (max-height: 1045px) {
-    .modal__main {
-        width: 655px;
-        max-width: 100%;
-        height: 680px;
-        max-height: 100%;
-    }
-
-    .form_row1 {
-        flex-direction: row;
-        justify-content: space-between;
-    
-    }
-
-    .form_row2 {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .form_row1 input {
-        width: 240px;
-        max-width: 100%;
-    }
-
-    .form_row2 input {
-        width: 240px;
-        max-width: 100%;
-    }
-
-    input#subject {
-        width: 545px;
-        max-width: 100%;
-    }
-    
-
-    
-}
-
-
-@media only screen and (max-height: 795px) {
-
-    form label {
-        font-size: 18px;
-        
-    }
-
-    input::placeholder {
-        font-size: 14px;
-    }
-
-    textarea::placeholder {
-        font-size: 14px;
-    }
-
-    textarea {
-        height: 110px;
-        max-height: 100%;
-    }
-
-    .modal__main {
-        padding: 57px 49px;
-        width: 580px;
-        max-width: 100%;
-        height: 555px;
-        max-height: 100%;
-    }
-
-    .form_row1 input {
-        width: 215px;
-        max-width: 100%;
-    }
-
-    .form_row2 input {
-        width: 215px;
-        max-width: 100%;
-    }
-
-    input {
-        margin-bottom: 28px;
-    }
-
-    .close_line1, .close_line2, .close_line3 {
-        width: 30px;
-    }
-
-    .form_button {
-        font-size: 14px;
-        padding: 17px 66px;
-        width: 180px;
-        max-width: 100%;
-        border-radius: 12px;
-    }
-
-}
-
-
-
-
-@media only screen and (max-height: 672px) {
-    form label {
-        font-size: 14px;
-        
-    }
-
-    input::placeholder {
-        font-size: 11px;
-    }
-
-    textarea::placeholder {
-        font-size: 11px;
-    }
-
-    textarea {
-        height: 83px;
-        max-height: 100%;
-    }
-
-    .modal__main {
-        padding: 50px 45px;
-        height: 515px;
-        max-width: 100%;
-    }
-}
-
-
-
-@media only screen and (max-width: 600px) and (max-height: 950px) {
-
-    
-    .form_row1 {
-        flex-direction: column;
-        gap: 0px;
-    }
-    
-    .form_row2 {
-        flex-direction: column;
-    }
-    
-    
-    form label {
-        font-size: 16px;
-        
-    }
-
-    input::placeholder {
-        font-size: 13px;
-    }
-
-    input {
-        margin-bottom: 25px;
-    }
-
-    textarea::placeholder {
-        font-size: 13px;
-    }
-
-    textarea {
-        padding: 10px;
-        height: 88px;
-        max-height: 100%;
-    }
-
-    /* textarea { */
-        /* height: 83px; */
-        /* max-height: 100%; */
-    /* } */
-
-    .modal__main {
-        width: 480px;
-        max-width: 100%;
-        padding: 50px 45px;
-        height: 720px;
-        max-width: 100%;
-    }
-
-    .form_button {
-        width: 190px;
-        max-width: 100%;
-        padding: 17px 0px;
-        border-radius: 12px;
-    }
-
-    
-
-}
-
-
-@media only screen and (max-width: 390px) and (max-height: 844px) {
-
-    form label {
-        font-size: 14px;
-        
-    }
-
-    input::placeholder {
-        font-size: 12px;
-    }
-
-    textarea::placeholder {
-        font-size: 12px;
-    }
-
-    .modal__main {
-        width: 325px;
-        max-width: 100%;
-        padding: 43px 32px 0px 32px;
-        height: 627px;
-        max-width: 100%;
-    }
-
-    .form_button {
-        margin: 0px auto;
-        width: 135px;
-        max-width: 100%;
-        font-size: 11px;
-        padding: 13px 0px;
-    }
-
-    textarea {
-        height: 71px;
-        max-height: 100%;
-        margin-bottom: 24px;
-    }
-
-    .modal_close {
-        top: 35px;
-        right: 20px;
-    }
-
-    .close_line1,
-    .close_line2,
-    .close_line3 {
-        width: 30px;
-    }
-
-
-
-
-
-}
 
 
 
@@ -2365,7 +2121,7 @@ address a {
     justify-content: space-between;
     min-height: 100vh;
     align-items: center;
-    padding: 50px 0px;
+    /* padding: 100px 0px; */
 }
 
 .oil-service__left h2 {
@@ -2862,7 +2618,7 @@ address a {
     }
 
     .oil-service__flex {
-        padding: 0px 0px;
+        /* padding: 0px 0px; */
     }
 
     
@@ -5706,6 +5462,11 @@ address a {
     .nav__list {
         gap: 35px;
         margin-bottom: 40px;
+        padding-top: 0;
+    }
+
+    .nav {
+        padding-top: 30px;
     }
 
 
@@ -6126,4 +5887,269 @@ address a {
 
    
 }
+
+
+                                    /* Adaptive Modal block */
+
+
+
+
+@media only screen and (max-height: 1045px) {
+    .modal__main {
+        width: 655px;
+        max-width: 100%;
+        height: 680px;
+        max-height: 100%;
+    }
+
+    .form_row1 {
+        flex-direction: row;
+        justify-content: space-between;
+    
+    }
+
+    .form_row2 {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .form_row1 input {
+        width: 240px;
+        max-width: 100%;
+    }
+
+    .form_row2 input {
+        width: 240px;
+        max-width: 100%;
+    }
+
+    input#subject {
+        width: 545px;
+        max-width: 100%;
+    }
+    
+
+    
+}
+
+
+@media only screen and (max-height: 795px) {
+
+    form label {
+        font-size: 18px;
+        
+    }
+
+    input::placeholder {
+        font-size: 14px;
+    }
+
+    textarea::placeholder {
+        font-size: 14px;
+    }
+
+    textarea {
+        height: 110px;
+        max-height: 100%;
+    }
+
+    .modal__main {
+        padding: 57px 49px;
+        width: 580px;
+        max-width: 100%;
+        height: 555px;
+        max-height: 100%;
+    }
+
+    .form_row1 input {
+        width: 215px;
+        max-width: 100%;
+    }
+
+    .form_row2 input {
+        width: 215px;
+        max-width: 100%;
+    }
+
+    input {
+        margin-bottom: 28px;
+    }
+
+    .close_line1, .close_line2, .close_line3 {
+        width: 30px;
+    }
+
+    .form_button {
+        font-size: 14px;
+        padding: 17px 66px;
+        width: 180px;
+        max-width: 100%;
+        border-radius: 12px;
+    }
+
+}
+
+
+
+
+@media only screen and (max-height: 672px) {
+    form label {
+        font-size: 14px;
+        
+    }
+
+    input::placeholder {
+        font-size: 11px;
+    }
+
+    textarea::placeholder {
+        font-size: 11px;
+    }
+
+    textarea {
+        height: 83px;
+        max-height: 100%;
+    }
+
+    .modal__main {
+        padding: 50px 45px;
+        height: 515px;
+        max-width: 100%;
+    }
+}
+
+
+@media only screen and (max-width: 800px) and (max-height: 600px) {
+
+    .form_row1 input {
+        width: 160px;
+        max-width: 100%;
+    }
+
+    .form_row2 input {
+        width: 160px;
+        max-width: 100%;
+    }
+
+    .modal__main {
+        width: 439px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) and (max-height: 950px) {
+
+    
+    .form_row1 {
+        flex-direction: column;
+        gap: 0px;
+    }
+    
+    .form_row2 {
+        flex-direction: column;
+    }
+    
+    
+    form label {
+        font-size: 16px;
+        
+    }
+
+    input::placeholder {
+        font-size: 13px;
+    }
+
+    input {
+        margin-bottom: 25px;
+    }
+
+    textarea::placeholder {
+        font-size: 13px;
+    }
+
+    textarea {
+        padding: 10px;
+        height: 88px;
+        max-height: 100%;
+    }
+
+    /* textarea { */
+        /* height: 83px; */
+        /* max-height: 100%; */
+    /* } */
+
+    .modal__main {
+        width: 480px;
+        max-width: 100%;
+        padding: 50px 45px;
+        height: 720px;
+        max-width: 100%;
+    }
+
+    .form_button {
+        width: 190px;
+        max-width: 100%;
+        padding: 17px 0px;
+        border-radius: 12px;
+    }
+
+    
+
+}
+
+
+@media only screen and (max-width: 390px) and (max-height: 844px) {
+
+    form label {
+        font-size: 14px;
+        
+    }
+
+    input::placeholder {
+        font-size: 12px;
+    }
+
+    textarea::placeholder {
+        font-size: 12px;
+    }
+
+    .modal__main {
+        width: 325px;
+        max-width: 100%;
+        padding: 43px 32px 0px 32px;
+        height: 627px;
+        max-width: 100%;
+    }
+
+    .form_button {
+        margin: 0px auto;
+        width: 135px;
+        max-width: 100%;
+        font-size: 11px;
+        padding: 13px 0px;
+    }
+
+    textarea {
+        height: 71px;
+        max-height: 100%;
+        margin-bottom: 24px;
+    }
+
+    .modal_close {
+        top: 35px;
+        right: 20px;
+    }
+
+    .close_line1,
+    .close_line2,
+    .close_line3 {
+        width: 30px;
+    }
+
+
+
+
+
+}
+
 
